- Code snippets for ui/ui-bootstrap and ui/ui-select tabs.

--- a/app/styles/bootstrap-theme/_partials.scss
+++ b/app/styles/bootstrap-theme/_partials.scss
@@ -27,3 +27,5 @@
 @import 'partials/charts';
 @import 'partials/icons';
 @import 'partials/breadcrumbs';
+@import 'partials/hljs';
+@import 'partials/ngclipboard';
