--- a/app/views/ui.html
+++ b/app/views/ui.html
@@ -10,19 +10,19 @@
 
     <ul class="nav nav-tabs">
         <li role="presentation" ui-sref-active="active">
-            <a angular-ripple="" ui-sref="theme"><i class="glyphicon glyphicon-pencil"></i> Theme</a>
+            <a ui-sref="theme"><i class="glyphicon glyphicon-pencil"></i> Theme</a>
         </li>
         <li role="presentation" ui-sref-active="active">
-            <a angular-ripple="" ui-sref="ui-bootstrap"><i class="glyphicon glyphicon-book"></i> UI Bootstrap</a>
+            <a ui-sref="ui-bootstrap"><i class="glyphicon glyphicon-book"></i> UI Bootstrap</a>
         </li>
         <li role="presentation" ui-sref-active="active">
-            <a angular-ripple="" ui-sref="ui-select"><i class="glyphicon glyphicon-book"></i> UI Select</a>
+            <a ui-sref="ui-select"><i class="glyphicon glyphicon-book"></i> UI Select</a>
         </li>
         <li role="presentation" ui-sref-active="active">
-            <a angular-ripple="" ui-sref="charts"><i class="glyphicon glyphicon-stats"></i> Charts</a>
+            <a ui-sref="charts"><i class="glyphicon glyphicon-stats"></i> Charts</a>
         </li>
         <li role="presentation" ui-sref-active="active">
-            <a angular-ripple="" ui-sref="ui-components"><i class="glyphicon glyphicon-book"></i> UI Components</a>
+            <a ui-sref="ui-components"><i class="glyphicon glyphicon-book"></i> UI Components</a>
         </li>
     </ul>
     <div ui-view class="tab-pane" autoscroll="false"></div>
