- last theme tab code snippets - copy text buttons added to ui-components tab.

--- a/app/views/ui-components/ui-components.html
+++ b/app/views/ui-components/ui-components.html
@@ -11,7 +11,8 @@
             <div class="panel-heading">Explanation</div>
             <div class="panel-body">
                 <p>Slider component with Appverse theme applied.</p>
-                <p>More examples and code snippets on the <a href="https://github.com/rzajac/angularjs-slider" target="_blank">official website</a>.</p>
+                <p>More examples and code snippets on the
+                    <a href="https://github.com/rzajac/angularjs-slider" target="_blank">official website</a>.</p>
             </div>
         </div>
     </div>
@@ -19,7 +20,10 @@
 <br>
 <uib-tabset>
     <uib-tab heading="HTML">
-        <pre hljs include="'views/ui-components/rzslider-code.html'" language="html"></pre>
+        <button class="btn btn-action" data-clipboard-target="#rzslider-html" ngclipboard>
+            Copy
+        </button>
+        <pre hljs include="'views/ui-components/rzslider-code.html'" language="html" id="rzslider-html"></pre>
     </uib-tab>
 </uib-tabset>
 
@@ -36,7 +40,8 @@
             <div class="panel-heading">Explanation</div>
             <div class="panel-body">
                 <p>QR code component.</p>
-                <p>More examples and code snippets on the <a href="https://github.com/janantala/angular-qr" target="_blank">official website</a>.</p>
+                <p>More examples and code snippets on the
+                    <a href="https://github.com/janantala/angular-qr" target="_blank">official website</a>.</p>
             </div>
         </div>
     </div>
@@ -44,7 +49,10 @@
 <br>
 <uib-tabset>
     <uib-tab heading="HTML">
-        <pre hljs include="'views/ui-components/qrcode-code.html'" language="html"></pre>
+      <button class="btn btn-action" data-clipboard-target="#qrcode-html" ngclipboard>
+          Copy
+      </button>
+        <pre hljs include="'views/ui-components/qrcode-code.html'" language="html" id="qrcode-html"></pre>
     </uib-tab>
 </uib-tabset>
 
@@ -61,7 +69,8 @@
             <div class="panel-heading">Explanation</div>
             <div class="panel-body">
                 <p>Xeditable component.</p>
-                <p>More examples and code snippets on the <a href="http://vitalets.github.io/angular-xeditable" target="_blank">official website</a>.</p>
+                <p>More examples and code snippets on the
+                    <a href="http://vitalets.github.io/angular-xeditable" target="_blank">official website</a>.</p>
             </div>
         </div>
     </div>
