--- a/app/views/theme/theme.html
+++ b/app/views/theme/theme.html
@@ -1198,7 +1198,19 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-4">
+        <div class="col-md-12">
+            <uib-tabset>
+                <uib-tab heading="HTML">
+                    <button class="btn btn-action" data-clipboard-target="#alerts-html" ngclipboard>
+                        Copy
+                    </button>
+                    <pre hljs language="html" include="'views/theme/alerts-code.html'" id="alerts-html"></pre>
+                </uib-tab>
+            </uib-tabset>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-6">
             <h2>Labels</h2>
             <div class="bs-component" style="margin-bottom: 40px;">
                 <span class="label label-default">Default</span>
@@ -1208,8 +1220,17 @@
                 <span class="label label-danger">Danger</span>
                 <span class="label label-info">Info</span>
             </div>
+
+            <uib-tabset>
+                <uib-tab heading="HTML">
+                    <button class="btn btn-action" data-clipboard-target="#labels-html" ngclipboard>
+                        Copy
+                    </button>
+                    <pre hljs language="html" include="'views/theme/labels-code.html'" id="labels-html"></pre>
+                </uib-tab>
+            </uib-tabset>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-6">
             <h2>Badges</h2>
             <div class="bs-component">
                 <ul class="nav nav-pills">
@@ -1230,6 +1251,14 @@
                     </li>
                 </ul>
             </div>
+            <uib-tabset class="mt-md">
+                <uib-tab heading="HTML">
+                    <button class="btn btn-action" data-clipboard-target="#badges-html" ngclipboard>
+                        Copy
+                    </button>
+                    <pre hljs language="html" include="'views/theme/badges-code.html'" id="badges-html"></pre>
+                </uib-tab>
+            </uib-tabset>
         </div>
     </div>
 </div>
@@ -1304,6 +1333,15 @@
                     <div class="progress-bar progress-bar-danger" style="width: 10%"></div>
                 </div>
             </div>
+
+            <uib-tabset class="mt-md">
+                <uib-tab heading="HTML">
+                    <button class="btn btn-action" data-clipboard-target="#progress-html" ngclipboard>
+                        Copy
+                    </button>
+                    <pre hljs language="html" include="'views/theme/progress-code.html'" id="progress-html"></pre>
+                </uib-tab>
+            </uib-tabset>
         </div>
     </div>
 </div>
@@ -1326,6 +1364,15 @@
                     </p>
                 </div>
             </div>
+
+            <uib-tabset class="mt-md">
+                <uib-tab heading="HTML">
+                    <button class="btn btn-action" data-clipboard-target="#jumbotron-html" ngclipboard>
+                        Copy
+                    </button>
+                    <pre hljs language="html" include="'views/theme/jumbotron-code.html'" id="jumbotron-html"></pre>
+                </uib-tab>
+            </uib-tabset>
         </div>
     </div>
 
@@ -1379,6 +1426,19 @@
                     </a>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+          <uib-tabset class="mt-md">
+              <uib-tab heading="HTML">
+                  <button class="btn btn-action" data-clipboard-target="#list-html" ngclipboard>
+                      Copy
+                  </button>
+                  <pre hljs language="html" include="'views/theme/list-code.html'" id="list-html"></pre>
+              </uib-tab>
+          </uib-tabset>
         </div>
     </div>
 
@@ -1465,6 +1525,19 @@
     </div>
 
     <div class="row">
+        <div class="col-md-12">
+          <uib-tabset class="mt-md">
+              <uib-tab heading="HTML">
+                  <button class="btn btn-action" data-clipboard-target="#panel-html" ngclipboard>
+                      Copy
+                  </button>
+                  <pre hljs language="html" include="'views/theme/panel-code.html'" id="panel-html"></pre>
+              </uib-tab>
+          </uib-tabset>
+        </div>
+    </div>
+
+    <div class="row">
         <div class="col-lg-12">
             <h2>Wells</h2>
         </div>
@@ -1490,6 +1563,19 @@
                     Look, I'm in a large well!
                 </div>
             </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+          <uib-tabset class="mt-md">
+              <uib-tab heading="HTML">
+                  <button class="btn btn-action" data-clipboard-target="#wells-html" ngclipboard>
+                      Copy
+                  </button>
+                  <pre hljs language="html" include="'views/theme/wells-code.html'" id="wells-html"></pre>
+              </uib-tab>
+          </uib-tabset>
         </div>
     </div>
 </div>
