Added ag-grid example

--- a/app/views/content.html
+++ b/app/views/content.html
@@ -15,6 +15,9 @@
             <a angular-ripple="" ui-sref="rest"><i class="glyphicon glyphicon-list"></i> REST ngGrid</a>
         </li>
         <li role="presentation" ui-sref-active="active">
+            <a angular-ripple="" ui-sref="rest-ag-grid"><i class="glyphicon glyphicon-list"></i> REST agGrid</a>
+        </li>
+        <li role="presentation" ui-sref-active="active">
             <a angular-ripple="" ui-sref="translation"><i class="glyphicon glyphicon-globe"></i> Translation</a>
         </li>
         <li role="presentation" ui-sref-active="active">
