--- a/app/views/rest/ag-grid/users-code.html
+++ b/app/views/rest/ag-grid/users-code.html
@@ -25,6 +25,14 @@
         </div>
     </div>
 
+    <div ng-show="users.$saving">
+        <div class="progress">
+            <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+                Saving...
+            </div>
+        </div>
+    </div>
+
     <div class="ag-fresh" ag-grid="gridOptions" style="width: 100%; height:435px;"></div>
     <div class="well">Total items: {{users.length}}</div>
 </div>
