Fixed copy task for theme images

--- a/app/views/theme/theme.html
+++ b/app/views/theme/theme.html
@@ -3,8 +3,7 @@
     <div class="panel-heading">Explanation</div>
     <div class="panel-body">
         <p>This page contains
-            <a href="http://getbootstrap.com/components/" target="_blank">Bootstrap</a>
-            components with Appverse theme applied.</p>
+            <a href="http://getbootstrap.com/components/" target="_blank">Bootstrap</a> components with Appverse theme applied.</p>
     </div>
 </div>
 
@@ -27,7 +26,7 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <a angular-ripple class="navbar-brand" href="#">Brand</a>
+                            <a angular-ripple class="navbar-brand" href="#"></a>
                         </div>
 
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -91,7 +90,7 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <a angular-ripple class="navbar-brand" href="#">Brand</a>
+                            <a angular-ripple class="navbar-brand" href="#"></a>
                         </div>
 
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
@@ -468,8 +467,7 @@
             <div class="bs-component">
                 <h2>Example body text</h2>
                 <p>Nullam quis risus eget
-                    <a href="#">urna mollis ornare</a>
-                    vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
+                    <a href="#">urna mollis ornare</a> vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
                 <p>
                     <small>This line of text is meant to be treated as fine print.</small>
                 </p>
@@ -707,8 +705,7 @@
                                 <div class="toggle-button">
                                     <label>
                                         <input checked="" type="checkbox">
-                                        <span class="toggle"></span>
-                                        Toggle Button
+                                        <span class="toggle"></span> Toggle Button
                                     </label>
                                 </div>
                             </div>
@@ -729,16 +726,14 @@
                                     <label>
                                         <input checked="checked" id="optionsRadios1" name="optionsRadios" type="radio" value="option1">
                                         <span class="circle"></span>
-                                        <span class="check"></span>
-                                        Option one is this
+                                        <span class="check"></span> Option one is this
                                     </label>
                                 </div>
                                 <div class="radio">
                                     <label>
                                         <input id="optionsRadios2" name="optionsRadios" type="radio" value="option2">
                                         <span class="circle"></span>
-                                        <span class="check"></span>
-                                        Option two is this
+                                        <span class="check"></span> Option two is this
                                     </label>
                                 </div>
                             </div>
@@ -891,16 +886,20 @@
                 </ul>
                 <div class="tab-content" id="myTabContent">
                     <div class="tab-pane fade active in" id="home">
-                        <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
+                        <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher
+                            synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
                     </div>
                     <div class="tab-pane fade" id="profile">
-                        <p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit.</p>
+                        <p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo
+                            booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit.</p>
                     </div>
                     <div class="tab-pane fade" id="dropdown1">
-                        <p>Etsy mixtape wayfarers, ethical wes anderson tofu before they sold out mcsweeney's organic lomo retro fanny pack lo-fi farm-to-table readymade. Messenger bag gentrify pitchfork tattooed craft beer, iphone skateboard locavore carles etsy salvia banksy hoodie helvetica. DIY synth PBR banksy irony. Leggings gentrify squid 8-bit cred pitchfork.</p>
+                        <p>Etsy mixtape wayfarers, ethical wes anderson tofu before they sold out mcsweeney's organic lomo retro fanny pack lo-fi farm-to-table readymade. Messenger bag gentrify pitchfork tattooed craft beer, iphone skateboard locavore carles
+                            etsy salvia banksy hoodie helvetica. DIY synth PBR banksy irony. Leggings gentrify squid 8-bit cred pitchfork.</p>
                     </div>
                     <div class="tab-pane fade" id="dropdown2">
-                        <p>Trust fund seitan letterpress, keytar raw denim keffiyeh etsy art party before they sold out master cleanse gluten-free squid scenester freegan cosby sweater. Fanny pack portland seitan DIY, art party locavore wolf cliche high life echo park Austin. Cred vinyl keffiyeh DIY salvia PBR, banh mi before they sold out farm-to-table VHS viral locavore cosby sweater.</p>
+                        <p>Trust fund seitan letterpress, keytar raw denim keffiyeh etsy art party before they sold out master cleanse gluten-free squid scenester freegan cosby sweater. Fanny pack portland seitan DIY, art party locavore wolf cliche high
+                            life echo park Austin. Cred vinyl keffiyeh DIY salvia PBR, banh mi before they sold out farm-to-table VHS viral locavore cosby sweater.</p>
                     </div>
                 </div>
             </div>
@@ -1171,8 +1170,7 @@
                 <div class="alert alert-dismissible alert-danger">
                     <button angular-ripple class="close" data-dismiss="alert" type="button">&times;</button>
                     <strong>Oh snap!</strong>
-                    <a angular-ripple class="alert-link" href="#">Change a few things up</a>
-                    and try submitting again.
+                    <a angular-ripple class="alert-link" href="#">Change a few things up</a> and try submitting again.
                 </div>
             </div>
         </div>
@@ -1180,8 +1178,7 @@
             <div class="bs-component">
                 <div class="alert alert-dismissible alert-success">
                     <button angular-ripple class="close" data-dismiss="alert" type="button">&times;</button>
-                    <strong>Well done!</strong>
-                    You successfully read
+                    <strong>Well done!</strong> You successfully read
                     <a angular-ripple class="alert-link" href="#">this important alert message</a>.
                 </div>
             </div>
@@ -1190,8 +1187,7 @@
             <div class="bs-component">
                 <div class="alert alert-dismissible alert-info">
                     <button angular-ripple class="close" data-dismiss="alert" type="button">&times;</button>
-                    <strong>Heads up!</strong>
-                    This
+                    <strong>Heads up!</strong> This
                     <a angular-ripple class="alert-link" href="#">alert needs your attention</a>, but it's not super important.
                 </div>
             </div>
@@ -1386,16 +1382,13 @@
             <div class="bs-component">
                 <ul class="list-group">
                     <li angular-ripple class="list-group-item">
-                        <span class="badge">14</span>
-                        Cras justo odio
+                        <span class="badge">14</span> Cras justo odio
                     </li>
                     <li angular-ripple class="list-group-item">
-                        <span class="badge">2</span>
-                        Dapibus ac facilisis in
+                        <span class="badge">2</span> Dapibus ac facilisis in
                     </li>
                     <li angular-ripple class="list-group-item">
-                        <span class="badge">1</span>
-                        Morbi leo risus
+                        <span class="badge">1</span> Morbi leo risus
                     </li>
                 </ul>
             </div>
@@ -1431,14 +1424,14 @@
 
     <div class="row">
         <div class="col-md-12">
-          <uib-tabset class="mt-md">
-              <uib-tab heading="HTML">
-                  <button class="btn btn-action" data-clipboard-target="#list-html" ngclipboard>
-                      Copy
-                  </button>
-                  <pre hljs language="html" include="'views/theme/list-code.html'" id="list-html"></pre>
-              </uib-tab>
-          </uib-tabset>
+            <uib-tabset class="mt-md">
+                <uib-tab heading="HTML">
+                    <button class="btn btn-action" data-clipboard-target="#list-html" ngclipboard>
+                        Copy
+                    </button>
+                    <pre hljs language="html" include="'views/theme/list-code.html'" id="list-html"></pre>
+                </uib-tab>
+            </uib-tabset>
         </div>
     </div>
 
@@ -1526,14 +1519,14 @@
 
     <div class="row">
         <div class="col-md-12">
-          <uib-tabset class="mt-md">
-              <uib-tab heading="HTML">
-                  <button class="btn btn-action" data-clipboard-target="#panel-html" ngclipboard>
-                      Copy
-                  </button>
-                  <pre hljs language="html" include="'views/theme/panel-code.html'" id="panel-html"></pre>
-              </uib-tab>
-          </uib-tabset>
+            <uib-tabset class="mt-md">
+                <uib-tab heading="HTML">
+                    <button class="btn btn-action" data-clipboard-target="#panel-html" ngclipboard>
+                        Copy
+                    </button>
+                    <pre hljs language="html" include="'views/theme/panel-code.html'" id="panel-html"></pre>
+                </uib-tab>
+            </uib-tabset>
         </div>
     </div>
 
@@ -1568,14 +1561,14 @@
 
     <div class="row">
         <div class="col-md-12">
-          <uib-tabset class="mt-md">
-              <uib-tab heading="HTML">
-                  <button class="btn btn-action" data-clipboard-target="#wells-html" ngclipboard>
-                      Copy
-                  </button>
-                  <pre hljs language="html" include="'views/theme/wells-code.html'" id="wells-html"></pre>
-              </uib-tab>
-          </uib-tabset>
+            <uib-tabset class="mt-md">
+                <uib-tab heading="HTML">
+                    <button class="btn btn-action" data-clipboard-target="#wells-html" ngclipboard>
+                        Copy
+                    </button>
+                    <pre hljs language="html" include="'views/theme/wells-code.html'" id="wells-html"></pre>
+                </uib-tab>
+            </uib-tabset>
         </div>
     </div>
 </div>
