--- a/app/views/theme/navbars-code.html
+++ b/app/views/theme/navbars-code.html
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a angular-ripple class="navbar-brand" href="#">Brand</a>
+            <a angular-ripple class="navbar-brand" href="#"></a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -69,7 +69,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a angular-ripple class="navbar-brand" href="#">Brand</a>
+            <a angular-ripple class="navbar-brand" href="#"></a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
