--- a/app/views/getting-started/doc.html
+++ b/app/views/getting-started/doc.html
@@ -1,6 +1,5 @@
 <ul>
-    <li><a href="http://appverse.org/api/html5/latest" target="_blank">Appverse HTML5 API</a>
-    </li>
-    <li><a href="https://www.npmjs.com/package/generator-appverse-html5" target="_blank">Appverse HTML5 Generator readme</a>
-    </li>
+    <li><a href="http://appverse.org/api/html5/latest" target="_blank">Appverse HTML5 Core API</a> </li>
+    <li><a href="http://appverse.org/api/html5-security/latest" target="_blank">Appverse HTML5 Security API</a> </li>
+    <li><a href="https://www.npmjs.com/package/generator-appverse-html5" target="_blank">Appverse HTML5 Generator readme</a> </li>
 </ul>
